tests/ui/parser/using_no_brace_operator.sol
using f as - for uint256 global; //~ ERROR: expected
